samples/_failures_safe/1761663041_0a8976_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73b53f04.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_73b53f04.c:145:25: error: expected ‘]’ at end of input
  145 |             line[len - 1
      |                         ^
      |                         ]
./samples/SAFE/__tmp_73b53f04.c:145:13: error: expected declaration or statement at end of input
  145 |             line[len - 1
      |             ^~~~
./samples/SAFE/__tmp_73b53f04.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73b53f04.c:145:13: error: expected declaration or statement at end of input
